<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_avaliador" />

    <EditText
        android:id="@+id/nome_avaliador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_avaliador" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_trabalho" />

    <EditText
        android:id="@+id/titulo_trabalho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/titulo_trabalho" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewnota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nota" />

    <EditText
        android:id="@+id/nota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nota" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewcoment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comentario" />

    <EditText
        android:id="@+id/comentarios"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2" />

</LinearLayout>